--- a/inventory.html
+++ b/inventory.html
@@ -4,71 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Store Inventory</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #007bff;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        input, button {
-            padding: 10px;
-            margin: 5px 0;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-        .delete-btn {
-            background-color: #ff4d4d;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-        .delete-btn:hover {
-            background-color: #cc0000;
-        }
-    </style>
+    <link rel="stylesheet" href="inventory.css">
 </head>
 <body>
     <div class="container">
@@ -79,6 +15,8 @@
             <input type="text" id="price" placeholder="Price (per unit)" required>
             <button type="submit">Add to Inventory</button>
         </form>
+        <button id="saveInventory">Save Inventory</button>
+        <button id="viewInventory">View Previous Inventory</button>
         <table>
             <thead>
                 <tr>
@@ -93,36 +31,6 @@
             </tbody>
         </table>
     </div>
-
-    <script>
-        const form = document.getElementById('inventoryForm');
-        const inventoryTable = document.getElementById('inventoryTable');
-
-        form.addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const medicineName = document.getElementById('medicineName').value;
-            const quantity = document.getElementById('quantity').value;
-            const price = document.getElementById('price').value;
-
-            const row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${medicineName}</td>
-                <td>${quantity}</td>
-                <td>${price}</td>
-                <td><button class="delete-btn" onclick="deleteRow(this)">Delete</button></td>
-            `;
-
-            inventoryTable.appendChild(row);
-
-            // Clear the form
-            form.reset();
-        });
-
-        function deleteRow(button) {
-            const row = button.parentElement.parentElement;
-            inventoryTable.removeChild(row);
-        }
-    </script>
+    <script src="inventory.js"></script>
 </body>
 </html>
