--- a/inventory.html
+++ b/inventory.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medical Store Inventory</title>
+    <title>Milk Store Inventory</title>
     <link rel="stylesheet" href="inventory.css">
 </head>
 <body>
     <div class="container">
-        <h1>Medical Store Inventory</h1>
+        <h1>Milk Store Inventory</h1>
         <form id="inventoryForm">
             <input type="text" id="medicineName" placeholder="Medicine Name" required>
             <input type="number" id="quantity" placeholder="Quantity" required>
@@ -20,7 +20,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Medicine Name</th>
+                    <th>Milk in litters</th>
                     <th>Quantity</th>
                     <th>Price (per unit)</th>
                     <th>Actions</th>
