--- a/inventory.html
+++ b/inventory.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Milk Store Inventory</h1>
         <form id="inventoryForm">
-            <input type="text" id="medicineName" placeholder="Medicine Name" required>
-            <input type="number" id="quantity" placeholder="Quantity" required>
+            <input type="text" id="medicineName" placeholder="Milk in litter" required>
+            <input type="date" type="time" id="quantity" placeholder="Date and Time" required>
             <input type="text" id="price" placeholder="Price (per unit)" required>
             <button type="submit">Add to Inventory</button>
         </form>
@@ -21,7 +21,7 @@
             <thead>
                 <tr>
                     <th>Milk in litters</th>
-                    <th>Quantity</th>
+                    <th>Date and Time</th>
                     <th>Price (per unit)</th>
                     <th>Actions</th>
                 </tr>
