--- a/inventory.html
+++ b/inventory.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1>Milk Store Inventory</h1>
         <form id="inventoryForm">
-            <input type="text" id="medicineName" placeholder="Milk in litter" required>
-            <input type="date" type="time" id="quantity" placeholder="Date and Time" required>
-            <input type="text" id="price" placeholder="Price (per unit)" required>
+            <input type="text"  placeholder="Milk in litter" required>
+            <input type="date" type="time"  placeholder="Date and Time" required>
+            <input type="text"  placeholder="Price (per unit)" required>
             <button type="submit">Add to Inventory</button>
         </form>
         <button id="saveInventory">Save Inventory</button>
