--- a/inventory.html
+++ b/inventory.html
@@ -11,7 +11,7 @@
         <h1>Milk Store Inventory</h1>
         <form id="inventoryForm">
             <input type="text"  placeholder="Milk in litter" required>
-            <input type="date" type="time"  placeholder="Date and Time" required>
+            <input type="date"   placeholder="Date and Time" required>
             <input type="text"  placeholder="Price (per unit)" required>
             <button type="submit">Add to Inventory</button>
         </form>
